# nlhousefinder

./: .env  Cargo.toml
.sqlx/: query-6018f092c5a7dca0bffd1fc43e7cbc344fef20aede4aaa8dbbe25cc283fcaaeb.json  query-71827b24d19bbb5cc3577b1f40007f80b185a9890b3a2f31d1be8bbfe08fb4d8.json  query-9f9ee7ba3514bab1c912e37f7f537ea36bf8dcfde97200fe108f6bcfdf24db6e.json  query-b989bf4d7273fdd4a769511e49c04e54cbb5183690ddacec7aa3c85c3b113051.json
migrations/: 20250105111803_create_properties_table.sql  20250105162750_add_subscribers_table.sql
src/: lib.rs  location.rs  main.rs  persistence.rs
src/scraping/: huurwoningen.rs  ikwilhuren.rs  mod.rs  pararius.rs  rotterdamwonen.rs  utils.rs  verra.rs
