[package]
name = "nlhousefinder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
geo = "0.29.3"
itertools = "0.14.0"
reqwest = { version = "0.12.12", features = ["rustls-tls"], default-features = false }
scraper = "0.22.0"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
teloxide = { version = "0.13.0", features = ["macros", "rustls"], default-features = false }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
